--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0",
     "react-query": "3.39.2",
     "react-social-icons": "^5.14.0",
     "react-timeago": "^7.1.0",
     "react-twitter-embed": "^4.0.4",
     "superjson": "^1.9.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.18.0"
   },
   "devDependencies": {
